# datarush-hackathon

./: .gitignore  README.md
datarush_hackathon/: .gitignore  README.md  airflow_theme.css  app.py  requirements.txt
datarush_hackathon/agents/: __init__.py
datarush_hackathon/agents/extensions/data_analysis_agent/: README.md  __init__.py  agent.py  integration.py  prompts.py  pyproject.toml  simple_integration.py  tools.py
datarush_hackathon/components/: advanced_filters.py  advanced_visualizations.py  chat_agent.py  data_enricher.py  export_manager.py  simple_bigquery_integration.py  smart_chat_agent.py  visualizations.py
datarush_hackathon/docs/: BUSINESS_ADVISOR_GUIDE.md  COULD_HAVE.md  DATA_ANALYSIS_AGENT_GUIDE.md  DESCRIPCION_HERRAMIENTA.md  ENHANCED_WORKFLOWS_GUIDE.md  MASTER_AGENT_GUIDE.md  README_BIGQUERY.md  RESEARCH_AGENT_GUIDE.md  RESUMEN_SOLUCION_POLITICAS.md  SHOULD_HAVE.md  analisis_funcionamiento_env.md  apis_configuration_guide.md  arbol_tareas_sistema.md  arquitectura_tecnica_sistema.md  configuracion_bigquery.md  diagrama_flujo_multiagente.md  diagrama_research_agent.md  env_analysis.md  estructura_agentes_organizada.md  fuentes_validacion_cruzada.md  google_cloud_setup.md  resumen_ejecutivo_comparacion.md  solucion_politicas_organizacion.md
datarush_hackathon/tests/: test_business_advisor.py  test_chat_integration.py  test_country_analysis.py  test_data_analysis_agent.py  test_data_flow.py  test_data_loader.py  test_enhanced_workflows.py  test_filters.py  test_integration.py  test_master_agent.py  test_narrative_style.py  test_new_layout.py  (+4 more)
(+22 files in other folders)
